corrected column layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ nav a:hover {
 .parent {
   //background-color: blue;
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin-top: 20px;
   margin-left: 40px;
@@ -49,14 +50,13 @@ nav a:hover {
 }
 
 .left {
-  //margin-left: 40px;
-  //margin-right: 10px;
+  flex-grow: 1;
+  margin: 10px;
 }
 
 .right {
-  //margin-left: 10px;
-  //margin-right: 40px;
-
+  flex-grow: 1;
+  margin: 10px;
 }
 
 
@@ -91,7 +91,7 @@ nav a:hover {
   }
 
   .parent {
-    flex-wrap: wrap;
+    flex-direction: row;
   }
 
 }
